# gedisimulator_root

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yaml
